Use the FastMath class included in jafama.

--- a/build.xml
+++ b/build.xml
@@ -53,31 +53,31 @@
 	
 	<target name="packageJWildfireJar" depends="compile" description="Package the JWildfire jar file">
 		<jar destfile="${jwildfire.jar.name}">
-			<fileset dir="${build.dir}" includes="org/jwildfire/"/>
-      <fileset dir="${src.dir}" includes="com/**/*.properties"/>
-      <fileset dir="${src.dir}" includes="com/**/*.gif"/>
-      <fileset dir="${src.dir}" includes="org/jwildfire/**/*.xml"/>
-      <fileset dir="${src.dir}" includes="org/jwildfire/**/*.html"/>
-      <fileset dir="${src.dir}" includes="org/jwildfire/swing/icons/*.gif"/>
-      <fileset dir="${src.dir}" includes="org/jwildfire/swing/icons/new/*.png"/>
-      <fileset dir="${src.dir}" includes="org/jwildfire/swing/welcomescreen/*.png"/>
-      <fileset dir="${src.dir}" includes="org/jwildfire/swing/welcomescreen/*.jpg"/>
-      <fileset dir="${src.dir}" includes="org/jwildfire/create/tina/io/scripts/*.jwfscript"/>
-      <fileset dir="${src.dir}" includes="org/jwildfire/create/tina/io/scripts/*.txt"/>
-      <fileset dir="${build.dir}" includes="com/"/>
-      <fileset dir="${build.dir}" includes="odk/"/>
-      <fileset dir="${build.dir}" includes="net/goui/"/>
-      <zipfileset src="lib/jep-2.4.1.jar"/>
-      <zipfileset src="lib/sunflow.jar"/>
-      <zipfileset src="lib/janino.jar"/>
-      <zipfileset src="lib/JTattoo-1.6.10.jar"/>
-      <zipfileset src="lib/jl1.0.1.jar"/>
-      <zipfileset src="lib/jtransforms-2.4.jar"/>
-      <zipfileset src="lib/svgSalamander-tiny.jar"/>
-      <zipfileset src="lib/colt-1.2.0.jar"/>
-      <manifest>
-        <attribute name="Main-Class" value="org.jwildfire.swing.Desktop"/>
-      </manifest>			
+			<fileset dir="${build.dir}" includes="org/jwildfire/" />
+			<fileset dir="${src.dir}" includes="com/**/*.properties" />
+			<fileset dir="${src.dir}" includes="com/**/*.gif" />
+			<fileset dir="${src.dir}" includes="org/jwildfire/**/*.xml" />
+			<fileset dir="${src.dir}" includes="org/jwildfire/**/*.html" />
+			<fileset dir="${src.dir}" includes="org/jwildfire/swing/icons/*.gif" />
+			<fileset dir="${src.dir}" includes="org/jwildfire/swing/icons/new/*.png" />
+			<fileset dir="${src.dir}" includes="org/jwildfire/swing/welcomescreen/*.png" />
+			<fileset dir="${src.dir}" includes="org/jwildfire/swing/welcomescreen/*.jpg" />
+			<fileset dir="${src.dir}" includes="org/jwildfire/create/tina/io/scripts/*.jwfscript" />
+			<fileset dir="${src.dir}" includes="org/jwildfire/create/tina/io/scripts/*.txt" />
+			<fileset dir="${build.dir}" includes="com/" />
+			<fileset dir="${build.dir}" includes="net/goui/" />
+			<zipfileset src="lib/jep-2.4.1.jar" />
+			<zipfileset src="lib/sunflow.jar" />
+			<zipfileset src="lib/jafama.jar" />
+			<zipfileset src="lib/janino.jar" />
+			<zipfileset src="lib/JTattoo-1.6.10.jar" />
+			<zipfileset src="lib/jl1.0.1.jar" />
+			<zipfileset src="lib/jtransforms-2.4.jar" />
+			<zipfileset src="lib/svgSalamander-tiny.jar" />
+			<zipfileset src="lib/colt-1.2.0.jar" />
+			<manifest>
+				<attribute name="Main-Class" value="org.jwildfire.swing.Desktop" />
+			</manifest>
 		</jar>
 	</target>
 
